# AppNativa

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/epautec/atlas/appnativa/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/epautec/atlas/appnativa/: MainActivity.java  SecondActivity.java
app/src/main/res/layout/: activity_main.xml  activity_second.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/epautec/atlas/appnativa/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
